--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ section {
        overflow: auto;
        padding-bottom: 60px;
        padding-top:30px;
-       color: black;
+       color: red;
 }
 footer {
        position: relative;
