--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,body {
        height:100%;
-       background:white;
+       background:black;
 } header {
        display:block;
        background:#d7e0e9;
